feat: Complete endpoints, controllers, and tested with Postman
- Created all necessary controllers for the application
- Developed and tested endpoints using Postman to ensure functionality
- Refactored services for proper endpoint operation
- Fixed issues and ensured all tests pass